--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -48,6 +48,6 @@
         "Creed Email Messaging": "0Ho4x000000PB9uCAG",
         "Creed Exception Handler@0.1.0-10": "04t4x000000AJZMAA4",
         "Creed Email Messaging@0.1.0-12": "04t4x000000AJaAAAW",
-        "DDMN Online Store Integration@0.1.0-11": "04t4x000000AJayAAG"
+        "DDMN Online Store Integration@0.1.0-15": "04t4x000000AJcLAAW"
     }
 }
