Naming Convention to OLS

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -48,6 +48,7 @@
         "Creed Email Messaging": "0Ho4x000000PB9uCAG",
         "Creed Exception Handler@0.1.0-10": "04t4x000000AJZMAA4",
         "Creed Email Messaging@0.1.0-13": "04t4x000000AJeRAAW",
-        "DDMN Online Store Integration@0.1.0-26": "04t4x000000AJftAAG"
+        "DDMN Online Store Integration@0.1.0-26": "04t4x000000AJftAAG",
+        "DDMN Online Store Integration@0.1.0-27": "04t4x000000AJgcAAG"
     }
 }
