--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -47,8 +47,7 @@
         "Creed Exception Handler": "0Ho4x000000PBA9CAO",
         "Creed Email Messaging": "0Ho4x000000PB9uCAG",
         "Creed Exception Handler@0.1.0-10": "04t4x000000AJZMAA4",
-        "Creed Email Messaging@0.1.0-13": "04t4x000000AJeRAAW",
-        "DDMN Online Store Integration@0.1.0-26": "04t4x000000AJftAAG",
-        "DDMN Online Store Integration@0.1.0-27": "04t4x000000AJgcAAG"
+        "Creed Email Messaging@0.1.0-14": "04t4x000000AJgwAAG",
+        "DDMN Online Store Integration@0.1.0-29": "04t4x000000AJh1AAG"
     }
 }
