--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,19 +4,19 @@
             "path": "creed-exception-handler",
             "default": false,
             "package": "Creed Exception Handler",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT"
+            "versionName": "ver 1.0",
+            "versionNumber": "1.1.0.NEXT"
         },
         {
             "path": "creed-email-app",
             "package": "Creed Email Messaging",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT",
+            "versionName": "ver 1.0",
+            "versionNumber": "1.1.0.NEXT",
             "default": false,
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
-                    "versionNumber": "0.1.0.LATEST"
+                    "versionNumber": "1.1.0.RELEASED"
                 }
             ]
         },
@@ -24,16 +24,16 @@
             "path": "app-ols-integration",
             "default": true,
             "package": "DDMN Online Store Integration",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT",
+            "versionName": "ver 1.0",
+            "versionNumber": "1.1.0.NEXT",
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
-                    "versionNumber": "0.1.0.LATEST"
+                    "versionNumber": "1.1.0.RELEASED"
                 },
                 {
                     "package": "Creed Email Messaging",
-                    "versionNumber": "0.1.0.LATEST"
+                    "versionNumber": "1.1.0.RELEASED"
                 }
             ]
         }
@@ -46,8 +46,8 @@
         "DDMN Online Store Integration": "0Ho4x000000PBAxCAO",
         "Creed Exception Handler": "0Ho4x000000PBA9CAO",
         "Creed Email Messaging": "0Ho4x000000PB9uCAG",
-        "Creed Exception Handler@0.1.0-10": "04t4x000000AJZMAA4",
-        "Creed Email Messaging@0.1.0-14": "04t4x000000AJgwAAG",
-        "DDMN Online Store Integration@0.1.0-36": "04t4x000000AJhkAAG"
+        "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
+        "Creed Email Messaging@1.1.0-3": "04t4x000000AJl3AAG",
+        "DDMN Online Store Integration@1.1.0-1": "04t4x000000AJlSAAW"
     }
 }
