--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -25,7 +25,7 @@
             "default": true,
             "package": "DDMN Online Store Integration",
             "versionName": "ver 1.0",
-            "versionNumber": "1.1.0.NEXT",
+            "versionNumber": "1.3.0.NEXT",
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
@@ -48,6 +48,7 @@
         "Creed Email Messaging": "0Ho4x000000PB9uCAG",
         "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
         "Creed Email Messaging@1.1.0-3": "04t4x000000AJl3AAG",
-        "DDMN Online Store Integration@1.1.0-1": "04t4x000000AJlSAAW"
+        "DDMN Online Store Integration@1.1.0-1": "04t4x000000AJlSAAW",
+        "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG"
     }
 }
