--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -11,7 +11,7 @@
             "path": "creed-email-app",
             "package": "Creed Email Messaging",
             "versionName": "ver 1.0",
-            "versionNumber": "1.1.0.NEXT",
+            "versionNumber": "1.2.0.NEXT",
             "default": false,
             "dependencies": [
                 {
@@ -25,7 +25,7 @@
             "default": true,
             "package": "DDMN Online Store Integration",
             "versionName": "ver 1.0",
-            "versionNumber": "1.3.0.NEXT",
+            "versionNumber": "1.4.0.NEXT",
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
@@ -33,7 +33,7 @@
                 },
                 {
                     "package": "Creed Email Messaging",
-                    "versionNumber": "1.1.0.RELEASED"
+                    "versionNumber": "1.2.0.LATEST"
                 }
             ]
         }
@@ -48,7 +48,8 @@
         "Creed Email Messaging": "0Ho4x000000PB9uCAG",
         "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
         "Creed Email Messaging@1.1.0-3": "04t4x000000AJl3AAG",
-        "DDMN Online Store Integration@1.1.0-1": "04t4x000000AJlSAAW",
-        "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG"
+        "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
+        "Creed Email Messaging@1.2.0-5": "04t4x000000AJx0AAG",
+        "DDMN Online Store Integration@1.4.0-6": "04t4x000000AJx5AAG"
     }
 }
