--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -49,7 +49,7 @@
         "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
         "Creed Email Messaging@1.1.0-3": "04t4x000000AJl3AAG",
         "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
-        "Creed Email Messaging@1.2.0-5": "04t4x000000AJx0AAG",
-        "DDMN Online Store Integration@1.4.0-6": "04t4x000000AJx5AAG"
+        "Creed Email Messaging@1.2.0-7": "04t4x000000AJxPAAW",
+        "DDMN Online Store Integration@1.4.0-9": "04t4x000000AJxUAAW"
     }
 }
