--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -11,7 +11,7 @@
             "path": "creed-email-app",
             "package": "Creed Email Messaging",
             "versionName": "ver 1.0",
-            "versionNumber": "1.2.0.NEXT",
+            "versionNumber": "1.3.0.NEXT",
             "default": false,
             "dependencies": [
                 {
@@ -25,7 +25,7 @@
             "default": true,
             "package": "DDMN Online Store Integration",
             "versionName": "ver 1.0",
-            "versionNumber": "1.4.0.NEXT",
+            "versionNumber": "1.5.0.NEXT",
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
@@ -33,7 +33,7 @@
                 },
                 {
                     "package": "Creed Email Messaging",
-                    "versionNumber": "1.2.0.LATEST"
+                    "versionNumber": "1.3.0.RELEASED"
                 }
             ]
         }
@@ -49,7 +49,7 @@
         "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
         "Creed Email Messaging@1.1.0-3": "04t4x000000AJl3AAG",
         "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
-        "Creed Email Messaging@1.2.0-7": "04t4x000000AJxPAAW",
-        "DDMN Online Store Integration@1.4.0-9": "04t4x000000AJxUAAW"
+        "Creed Email Messaging@1.3.0-1": "04t4x000000AJySAAW",
+        "DDMN Online Store Integration@1.5.0-1": "04t4x000000AJyXAAW"
     }
 }
