Bounce Report Update

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,9 +9,9 @@
         },
         {
             "path": "creed-email-app",
-            "package": "Creed Email Messaging",
+            "package": "Creed Email App",
             "versionName": "ver 1.0",
-            "versionNumber": "1.3.0.NEXT",
+            "versionNumber": "1.1.0.NEXT",
             "default": false,
             "dependencies": [
                 {
@@ -25,7 +25,7 @@
             "default": true,
             "package": "DDMN Online Store Integration",
             "versionName": "ver 1.0",
-            "versionNumber": "1.5.0.NEXT",
+            "versionNumber": "1.8.0.NEXT",
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
@@ -33,7 +33,7 @@
                 },
                 {
                     "package": "Creed Email Messaging",
-                    "versionNumber": "1.3.0.RELEASED"
+                    "versionNumber": "1.1.0.RELEASED"
                 }
             ]
         }
@@ -50,6 +50,14 @@
         "Creed Email Messaging@1.1.0-3": "04t4x000000AJl3AAG",
         "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
         "Creed Email Messaging@1.3.0-1": "04t4x000000AJySAAW",
-        "DDMN Online Store Integration@1.5.0-1": "04t4x000000AJyXAAW"
+        "DDMN Online Store Integration@1.6.0-1": "04t4x000000AK17AAG",
+        "DDMN Online Store Integration@1.6.0-2": "04t4x000000AK2yAAG",
+        "DDMN Online Store Integration@1.6.0-3": "04t4x000000AK33AAG",
+        "DDMN Online Store Integration@1.6.0-4": "04t4x000000AK38AAG",
+        "DDMN Online Store Integration@1.7.0-1": "04t4x000000AK3mAAG",
+        "DDMN Online Store Integration@1.8.0-1": "04t4x000000AK5JAAW",
+        "Creed Email App": "0Ho4x000000PBBHCA4",
+        "Creed Email App@1.0.0-1": "04t4x000000AK5OAAW",
+        "Creed Email App@1.1.0-1": "04t4x000000AK5YAAW"
     }
 }
