--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -31,7 +31,7 @@
             "path": "creed-email-app",
             "package": "Creed Email App",
             "versionName": "ver 1.0",
-            "versionNumber": "1.5.0.NEXT",
+            "versionNumber": "1.6.0.NEXT",
             "default": false,
             "dependencies": [
                 {
@@ -61,7 +61,7 @@
                 },
                 {
                     "package": "Creed Email App",
-                    "versionNumber": "1.5.0.RELEASED"
+                    "versionNumber": "1.6.0.LATEST"
                 }
             ]
         }
@@ -75,15 +75,20 @@
         "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
         "Creed Email App": "0Ho4x000000PBBHCA4",
         "Creed Email App@1.5.0-1": "04t4x000000AK75AAG",
+        "Creed Email App@1.6.0-1": "04t4x000000AKtzAAG",
+        "Creed Email App@1.6.0-2": "04t4x000000AKu4AAG",
+        "Creed Email App@1.6.0-3": "04t4x000000AKu9AAG",
         "DDMN Online Store Integration": "0Ho4x000000PBAxCAO",
         "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
         "DDMN Online Store Integration@2.2.0-1": "04t4x000000AK7PAAW",
         "DDMN Online Store Integration@2.2.0-2": "04t4x000000AKs3AAG",
+        "DDMN Online Store Integration@2.2.0-3": "04t4x000000AKswAAG",
+        "DDMN Online Store Integration@2.2.0-4": "04t4x000000AKuEAAW",
+        "DDMN Online Store Integration@2.2.0-5": "04t4x000000AKv2AAG",
         "Creed Http Handler": "0Ho4x000000PBC5CAO",
         "Creed Http Handler@1.0.0-1": "04t4x000000AKrUAAW",
         "Creed Http Handler@1.0.0-2": "04t4x000000AKryAAG",
         "Creed Record Type Util": "0Ho4x000000PBCACA4",
-        "Creed Record Type Util@1.0.0-1": "04t4x000000AKreAAG",
-        "DDMN Online Store Integration@2.2.0-3": "04t4x000000AKswAAG"
+        "Creed Record Type Util@1.0.0-1": "04t4x000000AKreAAG"
     }
 }
