--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,14 +4,14 @@
             "path": "creed-exception-handler",
             "default": false,
             "package": "Creed Exception Handler",
-            "versionName": "ver 1.0",
+            "versionName": "ver 1.1",
             "versionNumber": "1.1.0.NEXT"
         },
         {
             "path": "creed-record-type-util",
             "default": false,
             "package": "Creed Record Type Util",
-            "versionName": "ver 1.0",
+            "versionName": "ver 1.1",
             "versionNumber": "1.1.0.NEXT",
             "dependencies": [
                 {
@@ -24,13 +24,13 @@
             "path": "creed-http-handler",
             "default": false,
             "package": "Creed Http Handler",
-            "versionName": "ver 1.0",
-            "versionNumber": "1.1.0.NEXT"
+            "versionName": "ver 1.3",
+            "versionNumber": "1.3.0.NEXT"
         },
         {
             "path": "creed-email-app",
             "package": "Creed Email App",
-            "versionName": "ver 1.0",
+            "versionName": "ver 1.6",
             "versionNumber": "1.6.0.NEXT",
             "default": false,
             "dependencies": [
@@ -44,8 +44,8 @@
             "path": "app-ols-integration",
             "default": true,
             "package": "DDMN Online Store Integration",
-            "versionName": "ver 1.0",
-            "versionNumber": "2.2.0.NEXT",
+            "versionName": "ver 3.1",
+            "versionNumber": "3.1.0.NEXT",
             "dependencies": [
                 {
                     "package": "Creed Exception Handler",
@@ -53,15 +53,15 @@
                 },
                 {
                     "package": "Creed Record Type Util",
-                    "versionNumber": "1.0.0.LATEST"
+                    "versionNumber": "1.1.0.RELEASED"
                 },
                 {
                     "package": "Creed Http Handler",
-                    "versionNumber": "1.0.0.LATEST"
+                    "versionNumber": "1.3.0.RELEASED"
                 },
                 {
                     "package": "Creed Email App",
-                    "versionNumber": "1.6.0.LATEST"
+                    "versionNumber": "1.6.0.RELEASED"
                 }
             ]
         }
@@ -75,21 +75,13 @@
         "Creed Exception Handler@1.1.0-1": "04t4x000000AJjqAAG",
         "Creed Email App": "0Ho4x000000PBBHCA4",
         "Creed Email App@1.5.0-1": "04t4x000000AK75AAG",
-        "Creed Email App@1.6.0-1": "04t4x000000AKtzAAG",
-        "Creed Email App@1.6.0-2": "04t4x000000AKu4AAG",
-        "Creed Email App@1.6.0-3": "04t4x000000AKu9AAG",
+        "Creed Email App@1.6.0-4": "04t4x000000AL15AAG",
         "DDMN Online Store Integration": "0Ho4x000000PBAxCAO",
         "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
-        "DDMN Online Store Integration@2.2.0-1": "04t4x000000AK7PAAW",
-        "DDMN Online Store Integration@2.2.0-2": "04t4x000000AKs3AAG",
-        "DDMN Online Store Integration@2.2.0-3": "04t4x000000AKswAAG",
-        "DDMN Online Store Integration@2.2.0-4": "04t4x000000AKuEAAW",
-        "DDMN Online Store Integration@2.2.0-5": "04t4x000000AKv2AAG",
+        "DDMN Online Store Integration@3.0.0-1": "04t4x000000AL1jAAG",
         "Creed Http Handler": "0Ho4x000000PBC5CAO",
-        "Creed Http Handler@1.0.0-1": "04t4x000000AKrUAAW",
-        "Creed Http Handler@1.0.0-2": "04t4x000000AKryAAG",
+        "Creed Http Handler@1.3.0-1": "04t4x000000AL1eAAG",
         "Creed Record Type Util": "0Ho4x000000PBCACA4",
-        "Creed Record Type Util@1.0.0-1": "04t4x000000AKreAAG",
-        "Creed Http Handler@1.1.0-2": "04t4x000000AL07AAG"
+        "Creed Record Type Util@1.1.0-1": "04t4x000000AL10AAG"
     }
 }
