--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -79,6 +79,7 @@
         "DDMN Online Store Integration": "0Ho4x000000PBAxCAO",
         "DDMN Online Store Integration@1.3.0-1": "04t4x000000AJp5AAG",
         "DDMN Online Store Integration@3.0.0-1": "04t4x000000AL1jAAG",
+        "DDMN Online Store Integration@3.1.0-1": "04t4x000000AL2DAAW",
         "Creed Http Handler": "0Ho4x000000PBC5CAO",
         "Creed Http Handler@1.3.0-1": "04t4x000000AL1eAAG",
         "Creed Record Type Util": "0Ho4x000000PBCACA4",
