update to project json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -80,6 +80,6 @@
         "Creed Http Handler": "0Ho4x000000PBC5CAO",
         "Creed Http Handler@1.3.0-1": "04t4x000000AL1eAAG",
         "Creed Record Type Util": "0Ho4x000000PBCACA4",
-        "Creed Record Type Util@1.1.0-1": "04t4x000000AL10AAG",
+        "Creed Record Type Util@1.1.0-1": "04t4x000000AL10AAG"
     }
 }
